2005-04-30  Benhur Stein <benhur@inf.ufsm.br>
	* General/NSColor+Additions.m (-contrastingWhiteOrBlackColor):
	  use less contrasting colors
	* Paje/PajeController.m (-loadAllBundles): load StatViewer bundle
	* Paje/PajeTraceController.m (-createComponentGraph): inatantiate and
	  connect statViewer to component graph; some small changes to remove
	  compiler warnings
	* PajeEventDecoder/PajeEventDecoder.m: commented some unused code
	* StatViewer/PieCell.h StatViewer/PieCell.m StatViewer/StatArray.h
	  StatViewer/StatArray.m StatViewer/StatValue.h StatViewer/StatValue.m
	  StatViewer/StatViewer.gorm StatViewer/StatViewer.h
	  StatViewer/StatViewer.m: new files

2005-04-30  Benhur Stein <benhur@inf.ufsm.br>
	* GNUmakefile, */GNUmakefile: removed definition of GNUSTEP_MAKEFILES

2005-04-23  Benhur Stein <benhur@inf.ufsm.br>
	* General/NSUserDefaults+Colors.[hm],
	  General/NSUserDefaults+Additions.[hm] General/PajeEvent.m,
	  General/PajeType.m PajeEventDecoder/PajeEventDecoder.m,
	  ReductionFilter/ReduceEntityType.m SpaceTimeViewer/DrawView.m,
	  SpaceTimeViewer/STEntityTypeLayout.m: changed NSUserDefaults+Colors
	  to NSUserDefaults+Additions.
	* General/NSColor+Additions.[hm]: new files

2005-04-22  Benhur Stein <benhur@inf.ufsm.br>
	* General/DataScanner.m: set numeric locale to C instead of en_US
	  (suggestion from castet.matthieu@free.fr)

2005-04-18  Benhur Stein <benhur@inf.ufsm.br>
	* many: removed compiler warnings

2005-04-18  Benhur Stein <benhur@inf.ufsm.br>
        * General/PajeEntityInspector.m, General/PajeType.h,
          General/PajeType.m, General/SourceTextController.h,
          General/SourceTextController.m, General/UniqueString.m:
          removed some compiler warnings

2005-04-16  Benhur Stein <benhur@inf.ufsm.br>
	* FileReader/PajeFileReader.h, FileReader/PajeFileReader.m,
	  General/PSortedArray.m, General/PajeEntity.m, Paje/PajeCheckPoint.m,
	  Paje/PajeTraceController.m, PajeEventDecoder/PajeEventDecoder.m,